--- a/public/stylesheets/custom.css
+++ b/public/stylesheets/custom.css
@@ -26,7 +26,15 @@
   border-radius: 5px;
 }
 
-
 .vertical-align {
   padding-top: 160px;
+}
+
+.error-message {
+  width: 100%;
+  background-color: crimson;
+  color: white;
+  border-radius: 5px;
+  text-align: center;
+  margin-bottom: 5px;
 }
